# hydra

./: .dockerignore  .gitignore  AGENTS.md  BRANCH_TEST.md  CLAUDE.md  Cargo.toml  DESIGN.md  GETTING_STARTED.md  LICENSE  OPERATIONS.md  README.md  cli_remediation_plan.md  design-metis-shell.md  dourolabs-metis.md  flake.nix  fly.toml  hello.txt  nonex  notes.txt  package-lock.json  pnpm-lock.yaml  repo_descriptions.md  screenshot.js  screenshot.mjs  screenshot2.js  screenshot2.mjs  screenshot3.mjs  screenshot4.mjs  screenshot5.mjs  screenshot6.mjs  screenshot7.mjs  screenshot8.mjs
hydra/: AGENTS.md  Cargo.toml  config.toml.sample
hydra-bff/: Cargo.toml  build.rs
hydra-bff/src/: auth.rs  frontend.rs  lib.rs  main.rs  proxy.rs  router.rs  sse.rs  state.rs  upstream.rs  ws_proxy.rs
hydra-common/: AGENTS.md  Cargo.toml
hydra-common/src/: activity_log.rs  actor_ref.rs  build_cache.rs  constants.rs  document_path.rs  github.rs  ids.rs  lib.rs  principal.rs  repo_name.rs  review_utils.rs  rgb.rs  test_utils.rs
hydra-common/tests/: wire_casing.rs
hydra-server/: AGENTS.md  Cargo.toml  config.yaml.sample
hydra-server/migrations/: 20241115000000_init_store.sql  20250315000000_add_user_github_fields.sql  20250320000000_add_actors.sql  20250325000000_add_actor_auth_token_salt.sql  20250401000000_require_actor_auth_token_salt.sql  20250415000000_add_user_github_refresh_token.sql  20260127000000_add_versioned_rows.sql  20260131120000_add_documents_store.sql  20260205000000_add_v2_tables.sql  20260206000000_add_migration_status.sql  20260207000000_add_repositories_deleted.sql  20260207000001_add_users_deleted_column.sql  20260210000000_add_patch_branch_and_commit_range.sql  20260215000000_rename_user_or_worker_to_actor_id.sql  20260216000000_add_actor_creator.sql  20260217000000_add_actor_to_versioned_tables.sql  20260218000000_add_task_creator.sql  20260219000000_add_patch_creator_base_branch.sql  20260219000001_add_task_secrets.sql  20260220000000_backfill_null_creators.sql  20260223000000_add_creation_timestamp.sql  20260224000000_drop_creation_timestamp.sql  20260225000000_add_messages_v2_table.sql  20260226000000_refactor_messages_v2_recipient.sql  20260227000000_add_messages_v2_is_read.sql  20260228000000_add_patch_workflow_to_repositories.sql  20260228000001_add_notifications_table.sql  20260302000000_add_issues_title.sql  20260304000000_add_labels_table.sql  20260305000000_add_label_associations_table.sql  20260306000000_drop_redundant_label_associations_label_idx.sql  20260307000000_add_agents_table.sql  20260308000000_add_user_secrets_table.sql  20260309000000_make_github_token_columns_nullable.sql  20260310000000_add_labels_recurse_hidden.sql  20260311000000_drop_github_token_columns.sql  20260311000001_make_github_user_id_nullable.sql  20260312000000_add_object_relationships_table.sql  20260313000000_add_task_timing_fields.sql  20260314000000_make_issue_deps_patches_nullable.sql  (+98 more)
hydra-server/sqlite-migrations/: 20260307000000_init.sql  20260312000000_add_object_relationships_table.sql  20260314000000_rewrite_session_id_prefix.sql  20260315000000_rewrite_remaining_task_actor_variants.sql  20260318000000_add_mcp_config_path_to_agents.sql  20260326000000_add_form_to_issues.sql  20260327000000_add_feedback_to_issues.sql  20260328000000_add_is_latest_to_documents.sql  20260329000000_add_documents_path_unique_index.sql  20260329000001_add_is_latest_to_remaining_tables.sql  20260330000000_user_secrets_composite_pk.sql  20260401000000_add_auth_tokens_table.sql  20260403000000_drop_messages_v2.sql  20260509000000_add_conversations.sql  20260509000001_make_task_prompt_nullable.sql  20260510000000_add_session_settings_to_conversations.sql  20260510100000_add_interactive_conversation_id_to_tasks.sql  20260511000000_add_workflows.sql  20260511100000_add_conversation_resume_from_to_tasks.sql  20260512000000_drop_conversation_active_session_id.sql  20260512100000_repair_scrambled_user_secrets.sql  20260513000000_add_is_default_conversation_agent_to_agents.sql  20260516000000_drop_issues_v2_deps_patches.sql  20260519000000_add_task_usage.sql  20260523000000_add_merge_policy_to_repositories.sql  20260523010000_add_session_events.sql  20260523020000_add_session_shape_columns.sql  20260523030000_drop_patch_workflow_from_repositories.sql  20260523040000_normalize_session_mode_idle_timeout.sql  20260524000000_drop_conversation_session_state.sql  20260525000000_drop_legacy_session_columns.sql  20260525000001_add_session_id_to_auth_tokens.sql  20260525000002_add_is_revoked_to_auth_tokens.sql  20260526000000_require_session_shape_columns_not_null.sql  20260527000000_drop_documents_created_by.sql  20260527000000_drop_patches_created_by.sql  20260528000000_drop_notifications_table.sql  20260529000000_rename_refers_to_to_kebab_case.sql  20260530000000_add_assignee_principal_to_issues.sql  20260530000001_drop_issues_todo_list.sql  (+51 more)
hydra-server/src/: lib.rs  main.rs
hydra-server/tests/: migration_roundtrip.rs  migration_roundtrip_sqlite.rs  patch_author_attribution.rs
hydra-single-player/: Cargo.toml  build.rs
hydra-single-player/src/: bff.rs  main.rs  server.rs
hydra-single-player/tests/: e2e_fixtures_round_trip.rs
hydra/docs/: documents.md  graph-query.md  graph.md  issues.md  patches.md
hydra/src/: build_cache.rs  claude_formatter.rs  cli.rs  constants.rs  git.rs  github_device_flow.rs  interactive.rs  lib.rs  main.rs  output_writer.rs  test_utils.rs  util.rs  worker_commands.rs
hydra/tests/: cli_graph_diff_flow.rs  cli_graph_log_flow.rs  cli_graph_search_flow.rs  (+31 more)
metis/: AGENTS.md  Cargo.toml  build.rs  config.toml  config.toml.sample
metis-bff/: Cargo.toml  build.rs
metis-build-cache/: AGENTS.md  Cargo.toml
metis-common/: AGENTS.md  Cargo.toml
metis-component-library/: Cargo.toml  build.rs  fly.toml
metis-dashboard/: Cargo.toml
metis-integration/: Cargo.toml
metis-s3/: Cargo.toml  README.md  config.toml.sample
metis-server/: AGENTS.md  Cargo.toml  config.toml.sample  config.yaml.sample
metis-single-player/: Cargo.toml  build.rs
metis-ui/: Cargo.toml  fly.toml
(+1098 files in other folders)
