[workspace]
members = [
    "metis",
    "metis-server",
    "metis-common",
    "metis-build-cache",
    "metis-s3",
    "metis-component-library",
    "metis-ui",
]
default-members = [
    "metis",
    "metis-server",
    "metis-common",
    "metis-build-cache",
    "metis-s3",
]
resolver = "2"

[workspace.dependencies]
git2 = { version = "0.19" }
openssl-sys = { version = "0.9", default-features = false }
