[workspace]
members = [
    "metis",
    "metis-server",
    "metis-common",
    "metis-build-cache",
    "metis-bff",
    "metis-s3",
    "metis-single-player",
]
resolver = "2"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[workspace.dependencies]
git2 = { version = "0.19" }
openssl-sys = { version = "0.9", default-features = false }
