[workspace]
members = [
    "hydra",
    "hydra-server",
    "hydra-common",
    "hydra-build-cache",
    "hydra-bff",
    "hydra-s3",
    "hydra-single-player",
]
resolver = "2"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[workspace.dependencies]
git2 = { version = "0.19" }
openssl-sys = { version = "0.9", default-features = false }
