[package]
name = "hydra-common"
version = "0.26.0"
edition = "2024"

[features]
vendored-openssl = [
    "git2/vendored-openssl",
    "openssl-sys/vendored",
]
ts = ["dep:ts-rs"]
test-utils = []

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
cron = "0.16"
rand = "0.8"
git2 = { workspace = true }
openssl-sys = { workspace = true }
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
serde_json = "1.0"
octocrab = "0.49.5"
thiserror = "1.0"
tracing = "0.1"
ts-rs = { version = "12", optional = true, features = ["chrono-impl", "indexmap-impl", "serde-json-impl"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [] }
serde_yaml_ng = "0.10"
serde_urlencoded = "0.7"
