[package]
name = "hydra-server"
version = "0.1.0"
edition = "2024"

[features]
postgres = ["sqlx/postgres"]
kubernetes = ["dep:kube", "dep:k8s-openapi"]
enterprise = ["postgres", "kubernetes"]
test-utils = ["dep:httpmock", "dep:openssl"]
vendored-openssl = [
    "git2/vendored-openssl",
    "openssl-sys/vendored",
    "hydra-common/vendored-openssl",
]

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
futures = "0.3"
k8s-openapi = { version = "0.21.1", features = ["v1_29"], optional = true }
kube = { version = "0.88.1", features = ["runtime"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-util", "sync", "process", "time"] }
serde_yaml_ng = "0.10"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
bollard = "0.18"
dashmap = "6.1"
hydra-common = { path = "../hydra-common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
octocrab = "0.49.5"
git2 = { workspace = true }
tempfile = "3.14"
reqwest = { version = "0.12", features = ["json"] }
mime = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
    "json",
    "migrate",
] }
openssl-sys = { workspace = true }
httpmock = { version = "0.7", optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
serde_urlencoded = "0.7"
httpmock = "0.7"
openssl = "0.10"
regex = "1"
