[package]
name = "hydra-single-player"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = [
    "hydra/vendored-openssl",
    "hydra-server/vendored-openssl",
]
embedded-frontend = ["hydra-bff/embedded-frontend"]

[[bin]]
name = "hydra"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
getrandom = "0.2"
http = "1"
libc = "0.2"
hydra = { path = "../hydra" }
hydra-bff = { path = "../hydra-bff", features = ["embedded-frontend"] }
hydra-common = { path = "../hydra-common" }
hydra-server = { path = "../hydra-server" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rpassword = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
shellexpand = "3.1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
hydra-server = { path = "../hydra-server", features = ["test-utils"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
