[package]
name = "metis-bff"
version = "0.1.0"
edition = "2021"

[features]
embedded-frontend = ["rust-embed"]

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
http = "1"
mime_guess = "2"
rust-embed = { version = "8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros"] }
tower = "0.5"
tracing = "0.1"

[dev-dependencies]
metis-server = { path = "../metis-server", features = ["test-utils"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
