[package]
name = "metis-common"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
anyhow = "1.0"
gix = { version = "0.77", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
tempfile = "3.13"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [] }
serde_yaml = "0.9"
