[package]
name = "metis-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
octocrab = "0.49"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [] }
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt", "rt-multi-thread"] }
