[package]
name = "metis-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
metis-common = { path = "../metis-common" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.2", features = ["web"] }
dioxus-web = "0.7.2"
gloo-net = { version = "0.5", features = ["http"] }
serde = { version = "1", features = ["derive"] }
