[package]
name = "metis-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
futures = "0.3"
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
kube = { version = "0.88.1", features = ["runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
