[package]
name = "metis-server"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["reqwest"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
futures = "0.3"
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
kube = { version = "0.88.1", features = ["runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "io-util"] }
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
metis-common = { path = "../metis-common" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
octocrab = "0.49"
git2 = "0.19"
tempfile = "3.14"
reqwest = { version = "0.12", features = ["json"], optional = true }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "json",
    "migrate",
] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
