[package]
name = "metis-single-player"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = [
    "metis/vendored-openssl",
    "metis-server/vendored-openssl",
]

[[bin]]
name = "metis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
getrandom = "0.2"
libc = "0.2"
metis = { path = "../metis" }
metis-common = { path = "../metis-common" }
metis-server = { path = "../metis-server" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rpassword = "5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
shellexpand = "3.1"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
metis-server = { path = "../metis-server", features = ["test-utils"] }
