[package]
name = "metis-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metis-ui"
path = "src/main.rs"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "1443c71520c03f8ac8086b93ee68eda8c221c2ad", package = "dioxus-primitives" }
