[package]
name = "metis-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metis-ui"
path = "src/main.rs"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
metis-component-library = { path = "../metis-component-library" }
