[package]
name = "metis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "fs"] }
toml = "0.8"
metis-common = { path = "../metis-common" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3.13"
textwrap = { version = "0.16", features = ["terminal_size"] }
chrono = { version = "0.4", features = ["clock"] }
owo-colors = "4.1"
serde_yaml = "0.9"
serde_json = "1.0"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.27", features = ["event-stream"] }
octocrab = "0.38"
tui-textarea = "0.4"
git2 = "0.19"

[dev-dependencies]
httpmock = "0.7"
metis-server = { path = "../metis-server", features = ["test-utils"] }
