[package]
name = "metis"
version = "0.1.0"
edition = "2021"

[features]
vendored-openssl = [
    "git2/vendored-openssl",
    "openssl-sys/vendored",
    "metis-common/vendored-openssl",
]

[[bin]]
name = "metis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "io-std"] }
toml = "0.8"
metis-common = { path = "../metis-common" }
metis-build-cache = { path = "../metis-build-cache" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3.13"
textwrap = { version = "0.16", features = ["terminal_size"] }
chrono = { version = "0.4", features = ["clock"] }
owo-colors = "4.1"
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.27", features = ["event-stream"] }
tui-textarea = "0.4"
git2 = { workspace = true }
shlex = "1.3"
unicode-width = "0.1.14"
openssl-sys = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
metis-server = { path = "../metis-server", features = ["test-utils"] }
octocrab = "0.49"
jsonwebtoken = "10"
openssl = "0.10"
